--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "groq": "^4.10.2",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
