fix(vercel): unblock Expo web export build
- load Tamagui config via CJS for build-time tooling

- disable Tamagui metro/babel plugins in Vercel to avoid OOM

- switch web output to single-page export and adjust Vercel build command

- ignore/remove generated .tamagui cache artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ expo-env.d.ts
 # Metro
 .metro-health-check*
 
+# Tamagui (generated cache/output)
+.tamagui/
+
 # debug
 npm-debug.*
 yarn-debug.*
