--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,7 @@
 {
-  "buildCommand": "npx expo export -p web",
+  "buildCommand": "TAMAGUI_DISABLE=1 NODE_OPTIONS=--max-old-space-size=8192 npx expo export -p web",
   "outputDirectory": "dist",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
-
-
