--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     }
@@ -12,5 +13,11 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "sanity/sanity.types.ts"
+  ],
+  "exclude": [
+    "sanity/schemaTypes/**",
+    "sanity/sanity.config.ts",
+    "sanity/sanity.cli.ts",
+    "sanity/node_modules/**"
   ]
 }
