--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": "dist",
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/index.html" }
   ]
 }
-
